# swarp

./: .gitignore  LICENSE  README.md  assets.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp.json  tsconfig.json  vk_old
circuits/: .gitignore  Nargo.toml  POSEIDON_PARITY.md  Prover.toml  package-lock.json  package.json  run_build.sh  swap.circom  swarp.circom  tsconfig.json  wsl_run.sh
circuits/scripts/: build.sh  compile.sh  compute-swap-witness.js  compute-swap-witness.ts  e2e-test.ts  generate-test-fixtures.sh  generate-test-fixtures.ts  sample_input.json  setup-keys.sh  setup-toolchain.sh  test-poseidon-parity.js  test-poseidon-parity.ts  test-prove.sh
circuits/src/: main.nr
circuits/test/: conservation_test.json
contracts/: Cargo.toml  package.json
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/kyc-verifier/: Cargo.toml  fresh_pi.hex
contracts/mock-verifier/: Cargo.toml
contracts/mock-verifier/src/: lib.rs
contracts/oz-policy-engine/: Cargo.toml
contracts/oz-policy-engine/src/: lib.rs
contracts/ultrahonk-verifier/: Cargo.toml  gen_test.js  patch_vk.js  pi_test.rs.txt  static_proof.proof  vk
contracts/ultrahonk-verifier-multi/: Cargo.toml  fresh_proof.hex  vk_keccak
contracts/ultrahonk-verifier-multi/src/: lib.rs
contracts/ultrahonk-verifier/src/: lib.rs
contracts/zendswap-pool/: Cargo.toml  test_out.txt  test_out_withdraw.txt
contracts/zendswap-pool-multi/: Cargo.toml
contracts/zendswap-pool-multi/src/: integration_tests.rs  lib.rs  test_budget.rs  test_fixtures.rs  test_poseidon.rs
contracts/zendswap-pool/src/: integration_tests.rs  lib.rs  test_fixtures.rs  test_poseidon.rs
contracts/zendswap-pool/test_snapshots/tests/: test_deposit_increments_leaf_count_sequentially.1.json  test_deposit_negative_amount_fails.1.json  test_deposit_requires_depositor_auth.1.json  test_deposit_root_changes_after_deposit.1.json  test_deposit_success_eurc.1.json  test_deposit_success_usdc.1.json  test_deposit_unauthorized_fails.1.json  test_deposit_unknown_token_fails.1.json  test_double_initialize_fails.1.json  test_get_reserves.1.json  test_initialize_success.1.json  test_insert_leaf_changes_root.1.json  test_insert_two_leaves_root_matches_compute_root.1.json  test_recent_roots_buffer_capacity.1.json  test_single_leaf_root_parity.1.json  test_verify_merkle_root.1.json
docs/: CONFIDENTIAL_TOKEN_RESEARCH.md
kyc_circuit/: Nargo.toml
kyc_circuit/src/: main.nr
scripts/: .env.example  .gitignore  assets.json  create-test-assets.sh  deploy-v3.sh  deploy.sh  deploy_pool.bat  fund-pool.sh  init_pool.bat  init_pool.ps1  init_pool.sh  package.json  pi.json  proof.json  set-rates.sh  setup.sh  test-swap.sh  test_pi.json
scripts/src/: deploy.ts
web/: build-worker.js  extract_vk.mjs  fix-toasts.js  fresh_pi.json  fresh_proof.json  generate-fresh-proof.js  invoke_verifier.mjs  next.config.ts  output.txt  package.json  patch-bb.js  static_public_inputs.json  tailwind.config.js  test-poseidon.mjs  test-verifier.mjs  test.js  test_mint.js  test_static_proof.mjs  update_rates.js  update_rates_cli.js  verify_local.mjs
web/app/: layout.tsx  (+2 more)
(+69 files in other folders)
