[workspace]
resolver = "2"
members = [
    "ultrahonk-verifier",
    "zendswap-pool",
    "ultrahonk-verifier-multi",
    "zendswap-pool-multi",
    "mock-verifier", "oz-policy-engine", "kyc-verifier"
]

[workspace.dependencies]
soroban-sdk = "26.1.0"

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
