[package]
name = "mock-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
