[package]
name = "ultrahonk-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ultrahonk_soroban_verifier = { git = "https://github.com/NethermindEth/rs-soroban-ultrahonk", branch = "main", package = "ultrahonk_soroban_verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

