[package]
name = "zendswap-pool-multi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-poseidon = "26.0.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ultrahonk-verifier-multi = { path = "../ultrahonk-verifier-multi" }
mock-verifier = { path = "../mock-verifier", features = ["testutils"] }
