[package]
name = "zendswap-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-poseidon = "26.0.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ultrahonk-verifier = { path = "../ultrahonk-verifier" }
